--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -7,10 +7,16 @@
     font-weight: bold;
     font-size: 1.2rem;
 }
-@media (min-width:500px) and (max-width:401px) {
+@media (min-width:500px) and (max-height:400px) {
     .Burger {
-        width: 700px;
-        height: 600px;
+        width: 350px;
+        height: 300px;
+    }
+}
+@media (min-width:500px) and (max-height:401px) {
+    .Burger {
+        width: 450px;
+        height: 400px;
     }
 }
 @media (min-width:1000px) and (max-width:700px) {
