build control added

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,9 +1,9 @@
 .Burger{
     width: 100%;
     margin: auto;
-    height: 250px;
+    height: 350px;
     text-align: center;
-    overflow: scroll;
+    overflow: auto;
     font-weight: bold;
     font-size: 1.2rem;
 }
@@ -13,13 +13,13 @@
         height: 300px;
     }
 }
-@media (min-width:500px) and (max-height:401px) {
+@media (min-width:700px) and (max-height:601px) {
     .Burger {
         width: 450px;
-        height: 400px;
+        height: 500px;
     }
 }
-@media (min-width:1000px) and (max-width:700px) {
+@media (min-width:1000px) and (max-height:700px) {
     .Burger {
         width: 700px;
         height: 600px;
