--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -16,3 +16,14 @@
 .Toolbar nav{
     height: 100%;
 }
+
+.Logo {
+    height: 100%;
+    margin-top: 20px;
+}
+
+@media (max-width: 499px) {
+    .DesktopOnly{
+        display: none;
+    }
+}
