--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,25 +1,27 @@
-.Burger{
+.Burger {
     width: 100%;
     margin: auto;
-    height: 350px;
+    height: 250px;
     text-align: center;
-    overflow: auto;
     font-weight: bold;
     font-size: 1.2rem;
 }
-@media (min-width:500px) and (max-height:400px) {
+
+@media (min-width: 500px) and (min-height: 400px) {
     .Burger {
         width: 350px;
         height: 300px;
     }
 }
-@media (min-width:700px) and (max-height:601px) {
+
+@media (min-width: 500px) and (min-height: 401px) {
     .Burger {
         width: 450px;
-        height: 500px;
+        height: 400px;
     }
 }
-@media (min-width:1000px) and (max-height:700px) {
+
+@media (min-width: 1000px) and (min-height: 700px) {
     .Burger {
         width: 700px;
         height: 600px;
